Add play/pause function

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
 
                 <div class="btn btn-toggle-play">
-                    <i class="fa-solid fa-play-pause"></i>
-                    <i class="fa-solid fa-play"></i>
+                    <i class="fa-solid fa-pause icon-pause"></i>
+                    <i class="fa-solid fa-play icon-play"></i>
                 </div>
 
                 <div class="btn btn-next">
